--- a/mvc-refactor.html
+++ b/mvc-refactor.html
@@ -15,6 +15,11 @@
 </li>
 </ul>
 </li>
+<li><a href="#the-code">The Code</a><ul>
+<li><a href="#the-model">The Model</a></li>
+<li><a href="#the-view">The View</a></li>
+</ul>
+</li>
 <li><a href="#rendering-the-level">Rendering the level</a><ul>
 <li><a href="#where-the-rendering-code-lives">Where the rendering code lives</a></li>
 </ul>
@@ -156,8 +161,150 @@ All our Controller needs to do, is handle input for the current stack item.</p>
 <p>The View draws the dialogue text #1, and when the user presses the "anykey" we pop the stack and suddenly the View draws text #2. Neat. </p>
 <p>The Controller knows it's a dialogue mode and knows to pop the stack on the "anykey" press. </p>
 <p>Press enough keys, pop enough plates, we move through the storyline and get back to the game.</p>
+<h1 id="the-code">The Code</h1>
+<p>Now we can implement our MVC pattern in <a href="http://python.org">Python</a>. We will create the Model, the View and the Controller.
+We will also create the file that hosts instances of each and links them together.</p>
+<p>We will use the <a href="http://pygame.org">PyGame</a> library for our View's graphics. The whole MVC design will allow us to replace PyGame with another graphics library if that is our wish. The game's behaviour will stay the same since the View does not control how the game runs, cutting out many potential bugs when refactoring another View.</p>
+<p><em>our coding style is taken from <a href="http://www.python.org/dev/peps/pep-0008/">PEP8</a>. Read it. :)</em></p>
+<p>We will now create:</p>
+<ul>
+<li>model.py, the brain.</li>
+<li>view.py, draws what the brain thinks.</li>
+<li>controller.py, tells the brain what to do.</li>
+<li>eventmanager.py, coordinates all our senses.</li>
+<li>main.py, glues all of the above into a running instance.</li>
+</ul>
+<h2 id="the-model">The Model</h2>
+<p>Let's start with the brain of our game. Check this out:</p>
+<p><em>Model.py</em></p>
+<hr />
+<pre><code>import pygame
+from eventmanager import *
+
+class GameEngine(object):
+    """
+    Tracks the game state.
+    """
+
+    def __init__(self, evManager):
+        """
+        evManager (EventManager): Allows posting messages to the event queue.
+
+        Attributes:
+        running (bool): True while the engine is online. Changed via QuitEvent().
+        """
+
+        self.evManager = evManager
+        evManager.RegisterListener(self)
+        self.running = False
+
+    def notify(self, event):
+        """
+        Called by an event in the message queue. 
+        """
+
+        if isinstance(event, QuitEvent):
+            self.running = False
+
+    def run(self):
+        """
+        Starts the game engine loop.
+
+        This pumps a Tick event into the message queue for each loop.
+        The loop ends when this object hears a QuitEvent in notify(). 
+        """
+        self.running = True
+        self.evManager.Post(InitializeEvent())
+        while self.running:
+            newTick = TickEvent()
+            self.evManager.Post(newTick)
+</code></pre>
+<hr />
+<p>You can see the Model takes an instance of Event Manager, this is so we can post() messages from the Model. Any messages sent there are received into notify(), this includes messages posted by other instances. The run() method simply tells all other message listeners to get ready for action (InitializeEvent) and then starts posting TickEvents, forever, until it hears a QuitEvent through notify(). note how the Model imports eventmanager (line 1), but no View or Controller! The Model is blind to what is watching or controlling it, that is done all through the message pump.</p>
+<h2 id="the-view">The View</h2>
+<p>Next up we code the View. First you will note it imports eventmanager, and the model. We call this a strong reference to the model, because we explicitly code against the model's properties. Because we are only a View, we should try and limit our selves to only read the model data, and avoid calling it's functions directly - of course nothing stops you from making direct calls, but the MVC pattern for a View hints to us that we only display the Model state.</p>
+<p><em>view.py</em></p>
+<hr />
+<pre><code>import pygame
+import model
+from eventmanager import *
+
+class GraphicalView(object):
+    """
+    Draws the model state onto the screen.
+    """
+
+    def __init__(self, evManager, model):
+        """
+        evManager (EventManager): Allows posting messages to the event queue.
+        model (GameEngine): a strong reference to the game Model.
+
+        Attributes:
+        isinitialized (bool): pygame is ready to draw.
+        screen (pygame.Surface): the screen surface.
+        clock (pygame.time.Clock): keeps the fps constant.
+        smallfont (pygame.Font): a small font.
+        """
+
+        self.evManager = evManager
+        evManager.RegisterListener(self)
+        self.model = model
+        self.isinitialized = False
+        self.screen = None
+        self.clock = None
+        self.smallfont = None
+
+    def notify(self, event):
+        """
+        Receive events posted to the message queue. 
+        """
+
+        if isinstance(event, InitializeEvent):
+            self.initialize()
+        elif isinstance(event, QuitEvent):
+            # shut down the pygame graphics
+            self.isinitialized = False
+            pygame.quit()
+        elif isinstance(event, TickEvent):
+            self.renderall()
+            # limit the redraw speed to 30 frames per second
+            self.clock.tick(30)
+
+    def renderall(self):
+        """
+        Draw the current game state on screen.
+        Does nothing if isinitialized == False (pygame.init failed)
+        """
+
+        if not self.isinitialized:
+            return
+        # clear display
+        self.screen.fill((0, 0, 0))
+        # draw some words on the screen
+        somewords = self.smallfont.render(
+                    'The View is busy drawing on your screen', 
+                    True, 
+                    (0, 255, 0))
+        self.screen.blit(somewords, (0, 0))
+        # flip the display to show whatever we drew
+        pygame.display.flip()
+
+    def initialize(self):
+        """
+        Set up the pygame graphical display and loads graphical resources.
+        """
+
+        result = pygame.init()
+        pygame.font.init()
+        pygame.display.set_caption('MVC game')
+        self.screen = pygame.display.set_mode((800, 512))
+        self.clock = pygame.time.Clock()
+        self.smallfont = pygame.font.Font(None, 40)
+        self.isinitialized = True
+</code></pre>
+<hr />
 <h1 id="rendering-the-level">Rendering the level</h1>
-<p>We will use the Tiled map editor to create game levels, and the PyTMX library for reading the level files - See <a href="#references">References</a> below for links to these two great pieces of code :]</p>
+<p>We will use the Tiled map editor to create game levels, and the PyTMX library for reading the level files - See <a href="#references">References</a> below for links to these great pieces of code :]</p>
 <p>The best way to learn a library is to work through the included demo code.</p>
 <p>Read through the demo and mentally note the classes it uses. Then browse those
 class sources and go through their properties and functions. </p>
